# Cookies_Inventory

./: .gitignore  ERP同步說明.md  GUI使用說明.md  LINEBOT_Cookie_inventory.py  Line_Access_token.json  RAG_4_LINEBOT_LLM.py  README.md  calculate_cookie_inventory.py  config.ini  config.ini.template  cookie_inventory_gui.py  erp_db_helper.py  google_sheets_helper.py  pyproject.toml  setup_sheets.py  sync_index_from_erp.py  sync_inventory_from_erp.py  sync_production_schedule.py  sync_receipt_from_erp.py  sync_wip_from_erp.py  test_google_sheets.py  test_index.py  使用者設定指南.md  工作表說明.md  打包說明.md  算料系統設計.md  系統設計規劃.md  計算邏輯說明.md
cookies_inventory/: __init__.py  calculate_cookie_inventory.py  cookie_inventory_gui.py  google_sheets_helper.py  sync_index_from_erp.py  sync_inventory_from_erp.py  sync_production_schedule.py  sync_receipt_from_erp.py  sync_wip_from_erp.py
