[project]
name = "cookies-inventory"
version = "0.1.0"
description = "餅乾禮盒生產排程系統 (Cookies Inventory Management System)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "gspread>=5.12.0",
    "oauth2client>=4.1.3",
    "pyodbc>=5.3.0",
    "flask>=3.1.2",
    "line-bot-sdk>=3.21.0",
]

[project.optional-dependencies]
sqlserver = [
    "pyodbc>=4.0.39",
]
mysql = [
    "pymysql>=1.1.0",
]
postgresql = [
    "psycopg2-binary>=2.9.9",
]
oracle = [
    "cx_Oracle>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



